# protein-cross-sections

./: CITATION.cff  LICENSE  README.md  calculate_prot_a.py  calculate_protein_length.py  calculate_slice_areas.py  calculate_slice_distances.py  calculate_voxel_area.py  pyproject.toml  test.csv
src/: modules.py
src/protein_av.egg-info/: PKG-INFO  SOURCES.txt
src/protein_geometry.egg-info/: PKG-INFO  SOURCES.txt  requires.txt
systems/ABCB4/ABCB4_7niu_IF_apo_asym_ST_rep1_epsilon99/: ABCB4_7niu_IF_apo_asym_ST_rep1_epsilon99_frame1.gro
