[project]
name = "protein-av"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "matplotlib>=3.9.2",
    "mdanalysis>=2.7.0",
    "numpy>=1.26.4",
]

[tool.setuptools]
py-modules = ["modules"]

[tool.setuptools.packages.find]
where = ["src"]

